--- a/website/homepage.html
+++ b/website/homepage.html
@@ -19,25 +19,7 @@
 <body>
     <div class="header">
         <div class="container">
-            <div class="navbar">
-                <div class="logo">
-                    <img src="../images/logo.png" alt="logo" width="50px" height="50px" style="color:white;">
-                </div>
-                <nav>
-                    <ul id="MenuItems">
-                        <li><a href="homepage.html">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="products.html">Products</a></li>
-                        <li><a href="">Account</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="cart.html"><i class="fa fa-shopping-basket" style="font-size: 20px;"></i></a></li>
-                    </ul>
-                </nav>
-                <!-- <img src="../images/cart.png" width="30px" height="30px"> -->
-                <img src="../images/bars-solid.svg" class="menu-icon" onclick="menutoggle()">
-                <!-- <i class="fa fa-shopping-basket" style="font-size: 20px;" class="menu icon"></i> -->
-            </div>
-
+            <div id="navbar-placeholder"></div>
             <div class="row">
                 <div class="col-2">
                     <h1>Explore the best<br>clothes of your liking!</h1>
@@ -218,7 +200,8 @@
                 <div class="col-2">
                     <p>15% OFF</p>
                     <h1>Satania</h1>
-                    <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam a possimus in, omnis quis
+                    <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam a possimus in, omnis
+                        quis
                         consectetur officia nesciunt provident repellat necessitatibus ipsam alias, illo, inventore
                         molestiae ex id quam? Fugit, facilis!</small><br>
                     <a href="" class="btn">Buy Now &#9755</a>
@@ -336,19 +319,11 @@
         <hr>
         <p class="copyright">Copyright 2022</p>
     </div>
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script>
-        let MenuItems = document.getElementById("MenuItems");
-        MenuItems.style.maxHeight = "0px";
-        function menutoggle() {
-            if (MenuItems.style.maxHeight == "0px") {
-                MenuItems.style.maxHeight = "250px";
-            }
-            else {
-                MenuItems.style.maxHeight = "0px";
-            }
-
-        }
+        $.get("navbar.html", function (data) {
+            $("#navbar-placeholder").replaceWith(data);
+        });
     </script>
 </body>
 
