--- a/website/product-details.html
+++ b/website/product-details.html
@@ -20,24 +20,7 @@
 <body>
 
     <div class="container">
-        <div class="navbar">
-            <div class="logo">
-                <img src="../images/logo.png" alt="logo" width="50px" height="50px" style="color:white;">
-            </div>
-            <nav>
-                <ul id="MenuItems">
-                    <li><a href="homepage.html">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="">Account</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="cart.html"><i class="fa fa-shopping-basket" style="font-size: 20px;"></i></a></li>
-                </ul>
-            </nav>
-            <!-- <img src="../images/cart.png" width="30px" height="30px"> -->
-            <img src="../images/bars-solid.svg" class="menu-icon" onclick="menutoggle()">
-            <!-- <i class="fa fa-shopping-basket" style="font-size: 20px;" class="menu icon"></i> -->
-        </div>
+        <div id="navbar-placeholder"></div>
     </div>
 
     <!-- single proucts details -->
@@ -45,7 +28,7 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="../images/cutegirl.png" width="100%" id="product-img">
+                <img src="../images/cutegirl.png" width="100%" id="product-img" class="product-img">
                 <div class="small-img-row">
                     <div class="small-img-col">
                         <img src="../images/cutegirl.png" width="100%" class="small-img">
@@ -175,31 +158,13 @@
         <p class="copyright">Copyright 2022</p>
     </div>
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
+    <script src="product-details.js"></script>
     <script>
-        let MenuItems = document.getElementById("MenuItems");
-        MenuItems.style.maxHeight = "0px";
-        function menutoggle() {
-            if (MenuItems.style.maxHeight == "0px") {
-                MenuItems.style.maxHeight = "250px";
-            }
-            else {
-                MenuItems.style.maxHeight = "0px";
-            }
-        }
-        let productImg = document.getElementById("product-img");
-        let smallImg = document.getElementsByClassName("small-img");
-
-        for (let i = 0; i < 4; i++) {
-            smallImg[i].onclick = function () {
-                productImg.src = smallImg[i].src;
-            }
-        }
-
-        let openCart = document.getElementsByClassName("btn");
-        function opencart() {
-            window.open("cart.html", "_blank");
-        }
-
+        $.get("navbar.html", function (data) {
+            $("#navbar-placeholder").replaceWith(data);
+        });
     </script>
 </body>
 
