--- a/website/products.html
+++ b/website/products.html
@@ -20,24 +20,7 @@
 <body>
 
     <div class="container">
-        <div class="navbar">
-            <div class="logo">
-                <img src="../images/logo.png" alt="logo" width="50px" height="50px" style="color:white;">
-            </div>
-            <nav>
-                <ul id="MenuItems">
-                    <li><a href="homepage.html">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="">Account</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="cart.html"><i class="fa fa-shopping-basket" style="font-size: 20px;"></i></a></li>
-                </ul>
-            </nav>
-            <!-- <img src="../images/cart.png" width="30px" height="30px"> -->
-            <img src="../images/bars-solid.svg" class="menu-icon" onclick="menutoggle()">
-            <!-- <i class="fa fa-shopping-basket" style="font-size: 20px;" class="menu icon"></i> -->
-        </div>
+        <div id="navbar-placeholder"></div>
     </div>
 
     <div class="small-container">
@@ -209,23 +192,17 @@
         <p class="copyright">Copyright 2022</p>
     </div>
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script>
-        let MenuItems = document.getElementById("MenuItems");
-        MenuItems.style.maxHeight = "0px";
-        function menutoggle() {
-            if (MenuItems.style.maxHeight == "0px") {
-                MenuItems.style.maxHeight = "250px";
-            }
-            else {
-                MenuItems.style.maxHeight = "0px";
-            }
-
-        }
-
         let openDetails = document.getElementsByClassName("opendetails");
         function opendetails() {
-            window.open("product-details.html", "_blank");
+            window.open("product-details.html", "_self");
         }
+    </script>
+    <script>
+        $.get("navbar.html", function (data) {
+            $("#navbar-placeholder").replaceWith(data);
+        });
     </script>
 </body>
 
