--- a/website/navbar.html
+++ b/website/navbar.html
@@ -17,7 +17,7 @@
         <nav>
             <ul id="MenuItems">
                 <li><a href="homepage.html">Home</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="">Account</a></li>
                 <li><a href="">Contact</a></li>
