json files for rendering

--- a/website/homepage.html
+++ b/website/homepage.html
@@ -52,142 +52,12 @@
         <!-- featured products -->
         <h2 class="title">Featured Products</h2>
         <div class="row">
-            <div class="col-4"><img src="../images/beauty.jpg" alt="img1">
-                <h4>Cute Girl</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$45.00</p>
-            </div>
-            <div class="col-4"><img src="../images/shrek.jpg" alt="img1">
-                <h4>Smith-kun</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$105.00</p>
-            </div>
-            <div class="col-4"><img src="../images/dog.jpg" alt="img1">
-                <h4>Doge</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <p>$1.00</p>
-            </div>
-            <div class="col-4"><img src="../images/mike.jpg" alt="img1">
-                <h4>Mike-sama</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$800.00</p>
-            </div>
+            <!-- code injected from homepage.js -->
         </div>
         <!-- latest products -->
         <h2 class="title">Latest Products</h2>
         <div class="row">
-            <div class="col-4"><img src="../images/face.jpg" alt="img1">
-                <h4>Local Man</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$500.00</p>
-            </div>
-            <div class="col-4"><img src="../images/grandma.jpg" alt="img1">
-                <h4>Grandma</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <p>$105.00</p>
-            </div>
-            <div class="col-4"><img src="../images/saul.jpg" alt="img1">
-                <h4>Saul Goodman</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$999.90</p>
-            </div>
-            <div class="col-4"><img src="../images/beauty.jpg" alt="img1">
-                <h4>Cute Girl</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$45.00</p>
-            </div>
-            <div class="col-4"><img src="../images/pepperspray.jpg" alt="img1">
-                <h4>Pepper Spray</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$15.00</p>
-            </div>
-            <div class="col-4"><img src="../images/glasses.jpg" alt="img1">
-                <h4>Black Glasses</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                </div>
-                <p>$800.00</p>
-            </div>
-            <div class="col-4"><img src="../images/dog.jpg" alt="img1">
-                <h4>Doge</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <p>$1.00</p>
-            </div>
-            <div class="col-4"><img src="../images/walterwhite.jpg" alt="img1">
-                <h4>Walter White</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <p>$1999.99</p>
-            </div>
+            <!-- code injected from homepage.js -->
         </div>
     </div>
     <!-- offer -->
@@ -214,46 +84,7 @@
     <div class="testimonial">
         <div class="small-container">
             <div class="row">
-                <div class="col-3">
-                    <i class="fa fa-quote-left"></i>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aliquam ea earum sequi expedita
-                        perferendis, excepturi obcaecati.</p>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <img src="../images/grandma.jpg">
-                    <h3>Grandma</h3>
-                </div>
-                <div class="col-3"><i class="fa fa-quote-left"></i>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aliquam ea earum sequi expedita
-                        perferendis, excepturi obcaecati.</p>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <img src="../images/grandma.jpg">
-                    <h3>Grandma</h3>
-                </div>
-                <div class="col-3"><i class="fa fa-quote-left"></i>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aliquam ea earum sequi expedita
-                        perferendis, excepturi obcaecati.</p>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <img src="../images/grandma.jpg">
-                    <h3>Grandma</h3>
-                </div>
+                <!-- code injected from homepage.js -->
             </div>
         </div>
     </div>
@@ -262,21 +93,7 @@
     <div class="brands">
         <div class="small-container">
             <div class="row">
-                <div class="col-5">
-                    <img src="../images/adidas.png">
-                </div>
-                <div class="col-5">
-                    <img src="../images/amazon.png">
-                </div>
-                <div class="col-5">
-                    <img src="../images/bleach.png">
-                </div>
-                <div class="col-5">
-                    <img src="../images/dell.png">
-                </div>
-                <div class="col-5">
-                    <img src="../images/puma.png">
-                </div>
+                <!-- code injected from homepage.js -->
             </div>
         </div>
     </div>
@@ -325,6 +142,7 @@
             $("#navbar-placeholder").replaceWith(data);
         });
     </script>
+    <script type="module" src="homepage.js"></script>
 </body>
 
 </html>
