--- a/website/products.html
+++ b/website/products.html
@@ -33,117 +33,8 @@
                 <option>Sort by Sale</option>
             </select>
         </div>
-        <div class="row row-items" onclick="opendetails()">
-            <div class="col-4"><img src="../images/beauty.jpg" alt="img1">
-                <h4>Cute Girl</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$45.00</p>
-            </div>
-            <div class="col-4"><img src="../images/shrek.jpg" alt="img1">
-                <h4>Smith-kun</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$105.00</p>
-            </div>
-            <div class="col-4"><img src="../images/dog.jpg" alt="img1">
-                <h4>Doge</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <p>$1.00</p>
-            </div>
-            <div class="col-4"><img src="../images/mike.jpg" alt="img1">
-                <h4>Mike-sama</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$800.00</p>
-            </div>
-            <div class="col-4"><img src="../images/face.jpg" alt="img1">
-                <h4>Local Man</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$500.00</p>
-            </div>
-            <div class="col-4"><img src="../images/grandma.jpg" alt="img1">
-                <h4>Grandma</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <p>$105.00</p>
-            </div>
-            <div class="col-4"><img src="../images/saul.jpg" alt="img1">
-                <h4>Saul Goodman</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$999.90</p>
-            </div>
-            <div class="col-4"><img src="../images/pepperspray.jpg" alt="img1">
-                <h4>Pepper Spray</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$15.00</p>
-            </div>
-            <div class="col-4"><img src="../images/glasses.jpg" alt="img1">
-                <h4>Black Glasses</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                </div>
-                <p>$800.00</p>
-            </div>
-            <div class="col-4"><img src="../images/walterwhite.jpg" alt="img1">
-                <h4>Walter White</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <p>$1999.99</p>
-            </div>
+        <div class="row row-items">
+            <!-- code injected from homepage.js -->
         </div>
         <div class="page-btn">
             <span>1</span>
@@ -192,6 +83,7 @@
         <p class="copyright">Copyright 2022</p>
     </div>
 
+    <script type="module" src="product.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script>
         let openDetails = document.getElementsByClassName("opendetails");
