--- a/website/cart.html
+++ b/website/cart.html
@@ -25,40 +25,16 @@
 
     <!-- cart-details -->
     <div class="small-container cart-page">
-        <table>
+        <table class="cart-header">
             <tr>
                 <th>Product</th>
+                <th>Select Quantity</th>
                 <th>Quantity</th>
                 <th>Sub-Total</th>
             </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="../images/beauty.jpg" alt="logo">
-                        <div>
-                            <p>Cute Girl</p>
-                            <small>Price : $45.00</small><br>
-                            <a href="">Remove</a>
-                        </div>
-                    </div>
-                </td>
-                <td><input type="number" value="1" min="1"></td>
-                <td>Price</td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="../images/cutegirl2.png" alt="logo">
-                        <div>
-                            <p>Cute Girl</p>
-                            <small>Price : $45.00</small><br>
-                            <a href="">Remove</a>
-                        </div>
-                    </div>
-                </td>
-                <td><input type="number" value="1" min="1"></td>
-                <td>Price</td>
-            </tr>
+        </table>
+        <table class="cart-table">
+            <!-- code injected from homepage.js -->
         </table>
 
         <div class="total-price">
@@ -72,7 +48,7 @@
                     <td>Some Price</td>
                 </tr>
                 <tr>
-                    <td>Total</td>
+                    <td>Grand Total</td>
                     <td>Some Price</td>
                 </tr>
             </table>
@@ -117,6 +93,7 @@
         <hr>
         <p class="copyright">Copyright 2022</p>
     </div>
+    <script type="module" src="cart.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script>
         $.get("navbar.html", function (data) {
