--- a/website/cart.html
+++ b/website/cart.html
@@ -38,19 +38,7 @@
         </table>
 
         <div class="total-price">
-            <table>
-                <tr>
-                    <td>Sub-Total</td>
-                    <td>Some Price</td>
-                </tr>
-                <tr>
-                    <td>Delivery Charge</td>
-                    <td>Some Price</td>
-                </tr>
-                <tr>
-                    <td>Grand Total</td>
-                    <td>Some Price</td>
-                </tr>
+            <table class="total-table">
             </table>
         </div>
     </div>
