--- a/website/navbar.html
+++ b/website/navbar.html
@@ -19,7 +19,7 @@
                 <li><a href="homepage.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="">Account</a></li>
+                <li><a href="account.html">Account</a></li>
                 <li><a href="">Contact</a></li>
                 <li><a href="cart.html"><i class="fa fa-shopping-basket" style="font-size: 20px;"></i></a></li>
             </ul>
