--- a/website/navbar.html
+++ b/website/navbar.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NavBar</title>
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+    integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -21,15 +20,15 @@
                 <li><a href="products.html">Products</a></li>
                 <li><a href="account.html">Account</a></li>
                 <li><a href="">Contact</a></li>
-                <li><a href="cart.html"><i class="fa fa-shopping-basket" style="font-size: 20px;"></i></a></li>
+                <li><a href="cart.html"><i class="fas fa-shopping-cart" style="font-size: 20px; color:black"></i></a>
+                </li>
             </ul>
         </nav>
         <!-- <img src="../images/cart.png" width="30px" height="30px"> -->
         <img src="../images/bars-solid.svg" class="menu-icon" onclick="menutoggle()">
         <!-- <i class="fa fa-shopping-basket" style="font-size: 20px;" class="menu icon"></i> -->
-
-        <script src="navbar.js"></script>
     </div>
+    <script src="navbar.js"></script>
 </body>
 
 </html>
