--- a/website/cart.html
+++ b/website/cart.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
-    <link rel="stylesheet" href="homepage.css">
-    <link rel="stylesheet" href="product.css">
+    <link rel="stylesheet" href="../styles/homepage.css">
+    <link rel="stylesheet" href="../styles/product.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -19,9 +19,9 @@
 
 <body>
 
-    <div class="container">
+
         <div id="navbar-placeholder"></div>
-    </div>
+
 
     <!-- cart-details -->
     <div class="small-container cart-page">
