--- a/website/homepage.html
+++ b/website/homepage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="../styles/homepage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -22,9 +22,9 @@
 
 <body>
     <div class="header">
+        <div id="navbar-placeholder"></div>
         <div class="container">
-            <div id="navbar-placeholder"></div>
-            <div class="row" id="Tag">
+            <div class="row website-tag" id="Tag">
                 <div class="col-2">
                     <h1>Explore the best<br>clothes of your liking!</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure doloremque facilis<br> minus
@@ -34,8 +34,8 @@
                         porro, eum quos.</p>
                     <a href="" class="btn">Shop Now &#9755</a>
                 </div>
-                <div class="col-2">
-                    <img src="../images/Woman.png" alt="image" style="height: 400px; width:350px;">
+                <div class="col-2 heading-img">
+                    <img src="../images/Woman2.png" alt="image">
                 </div>
             </div>
         </div>
@@ -65,22 +65,16 @@
         </div>
     </div>
     <!-- offer -->
-    <div class="offer">
-        <div class="small-container">
-            <div class="row">
-                <div class="col-2">
-                    <img src="../images/Thrasher_Hoodie.png" alt="hoodie" class="offer-img">
-                </div>
-                <div class="col-2">
-                    <p>15% OFF</p>
-                    <h1>Thrasher Hoodie</h1>
-                    <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam a possimus in, omnis
-                        quis
-                        consectetur officia nesciunt provident repellat necessitatibus ipsam alias, illo, inventore
-                        molestiae ex id quam? Fugit, facilis!</small><br>
-                    <a href="" class="btn">Buy Now &#9755</a>
-                </div>
-            </div>
+    <div class="offerRow">
+        <img src="../images/Thrasher_Hoodie.png" alt="hoodie" class="offer-img">
+        <div class="offerCol">
+            <p>15% OFF</p>
+            <h1>Thrasher Hoodie</h1>
+            <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam a possimus in, omnis
+                quis
+                consectetur officia nesciunt provident repellat necessitatibus ipsam alias, illo, inventore
+                molestiae ex id quam? Fugit, facilis!</small><br>
+            <a href="" class="btn">Buy Now &#9755</a>
         </div>
     </div>
 
