--- a/website/navbar.html
+++ b/website/navbar.html
@@ -2,10 +2,9 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="../styles/navbar.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
     integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -13,7 +12,7 @@
         <div class="logo">
             <img src="../images/logo.png" alt="logo" width="50px" height="50px" style="color:white;">
         </div>
-        <nav>
+        <div class="menus">
             <ul id="MenuItems">
                 <li><a href="homepage.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -23,7 +22,7 @@
                 <li><a href="cart.html"><i class="fas fa-shopping-cart" style="font-size: 20px; color:black"></i></a>
                 </li>
             </ul>
-        </nav>
+        </div>
         <!-- <img src="../images/cart.png" width="30px" height="30px"> -->
         <img src="../images/bars-solid.svg" class="menu-icon" onclick="menutoggle()">
         <!-- <i class="fa fa-shopping-basket" style="font-size: 20px;" class="menu icon"></i> -->
