--- a/website/footer.html
+++ b/website/footer.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer</title>
-    <link href="footer.css" rel="stylesheet">
+    <link href="../styles/footer.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- footer -->
 
-    <div class="footer">
+    <div class="footer" >
         <div class="container">
             <div class="row">
                 <div class="footer-col-1">
