--- a/website/product-details.html
+++ b/website/product-details.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products Details</title>
-    <link rel="stylesheet" href="homepage.css">
-    <link rel="stylesheet" href="product.css">
-    <link rel="stylesheet" href="product-details.css">
+    <link rel="stylesheet" href="../styles/homepage.css">
+    <link rel="stylesheet" href="../styles/product-details.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -20,51 +19,17 @@
 
 <body>
 
-    <div class="container">
-        <div id="navbar-placeholder"></div>
-    </div>
+
+    <div id="navbar-placeholder"></div>
 
     <!-- single proucts details -->
 
-    <div class="small-container single-product product-details-div">
-        <div class="row" >
-            <div class="col-2">
-                <img src="../images/Black-Nike_Shoes.png" width="100%" id="product-img" class="product-img">
-                <div class="small-img-row">
-                    <div class="small-img-col">
-                        <img src="../images/Black-Nike_Shoes.png" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="../images/Black-Nike_Shoes Flipped.png" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="#" width="100%" class="small-img">
-                    </div>
-                    <div class="small-img-col">
-                        <img src="#" width="100%" class="small-img">
-                    </div>
-                </div>
-            </div>
-            <div class="col-2">
-                <p>Shoes</p>
-                <h1>Nike Special Edition Shoes</h1>
-                <h4>$45.00</h4>
-                <select>
-                    <option>Select date</option>
-                    <option>Today</option>
-                    <option>Tomorrow</option>
-                </select>
-                <input type="number" value="1" min="1">
-                <a href="" class="btn" onclick="opencart()">Add to Cart</a>
-                <h3>Product Details <i class="fa fa-indent"></i></h3><br>
-                <p>#</p>
-            </div>
-        </div>
+    <div class="small-container single-product product-details-div" id="product-each-details">
     </div>
 
     <!-- title -->
-    <div class="small-container">
-        <div class="row row-2">
+    <div class="rel-pro">
+        <div class="rel-pro-row">
             <h2>Related Products</h2>
             <p>View More</p>
         </div>
@@ -126,7 +91,7 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
-    <script src="product-details.js"></script>
+    <script type="module" src="product-details.js"></script>
     <script>
         $.get("navbar.html", function (data) {
             $("#navbar-placeholder").replaceWith(data);
