card.js remove from cart

--- a/website/cart.html
+++ b/website/cart.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <link rel="stylesheet" href="../styles/homepage.css">
-    <link rel="stylesheet" href="../styles/product.css">
+    <link rel="stylesheet" href="../styles/cart.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -22,23 +22,21 @@
     <div id="navbar-placeholder"></div>
 
     <!-- cart-details -->
-    <div class="small-container cart-page">
-        <table class="cart-header">
-            <tr>
-                <th>Product</th>
-                <th>Select Quantity</th>
-                <th>Quantity</th>
-                <th>Price</th>
-                <th>Sub-Total</th>
-            </tr>
-        </table>
+    <div class="cart-page">
+        <div class="cart_header">
+            <h2 id="cart_title">Your Cart</h2>
+        </div>
+
         <table class="cart-table">
-            <!-- code injected from homepage.js -->
+            <!-- code injected from cart.js -->
         </table>
 
         <div class="total-price">
             <table class="total-table" id="grandTotalTable">
             </table>
+        </div>
+        <div class="checkout">
+            <button id="checkout-btn">Checkout</button>
         </div>
     </div>
 
